--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,19 @@
 
 <body>
   <h1>LA LAKERS TRIBUTE PAGE</h1>
+  <header class="header">
+    <nav class="navbar">
+      <h2>Lakers</h2>
+      <a href="index.html">Home</a>
+      <a href="about.html">About the team</a>
+      <a href="#">Team Roster</a>
+      <a href="#">Lebron James</a>
+    </nav>
+  </header>
+
+  <main>
+
+  </main>
 </body>
 
 </html>
