--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 
   <!-- CSS Stylesheet -->
   <link rel="stylesheet" href="styles.css">
-  <title>LA LAKERS TEAM</title>
+  <title>LA LAKERS TEAM </title>
 </head>
 
 <body>
@@ -33,7 +33,7 @@
           </li>
           <li><a class="text-gold" href="roster.html"><span aria-hidden="true">Roster</span></a>
           </li>
-          <li><a class="text-gold" href="kobe.html"><span aria-hidden="true">Kobe Bryant</span></a>
+          <li><a class="text-gold btn" href="kobe.html"><span aria-hidden="true">Kobe Bryant</span></a>
           </li>
         </ul>
       </nav>
