Update navbar in styles.css

--- a/src/index.html
+++ b/src/index.html
@@ -126,7 +126,7 @@
       </div>
     </main>
     <footer class="footer">
-      <p class="text-medium fs-400">Copyright &copy; All Rights Reserved
+      <p class="text-medium fs-400">Copyright 2021 &copy; All Rights Reserved
       </p>
       <p class="copyright text-purple">Coded by: AppleJaxxZ and @jacktree_coding</p>
     </footer>
