--- a/src/pages/kobe/kobe.html
+++ b/src/pages/kobe/kobe.html
@@ -12,7 +12,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;500;700&display=swap" rel="stylesheet" />
 
   <!-- CSS Stylesheet -->
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="/src/styles.css" />
+  <link rel="stylesheet" href="./kobe.css">
   <title>LA LAKERS TEAM</title>
 </head>
 
@@ -34,16 +35,16 @@
               letter-spacing-3
             ">
           <li>
-            <a class="text-gold" href="index.html"><span aria-hidden="true"> Home </span></a>
+            <a class="text-gold" href="/src/index.html"><span aria-hidden="true"> Home </span></a>
           </li>
           <li>
-            <a class="text-gold" href="about.html"><span aria-hidden="true">About</span></a>
+            <a class="text-gold" href="/src/pages/about/.html"><span aria-hidden="true">About</span></a>
           </li>
           <li>
-            <a class="text-gold" href="roster.html"><span aria-hidden="true">Roster</span></a>
+            <a class="text-gold" href="/src/pages/player/player.html"><span aria-hidden="true">Player</span></a>
           </li>
           <li class="active">
-            <a class="text-gold btn" href="kobe.html"><span aria-hidden="true">Kobe Bryant</span></a>
+            <a class="text-gold btn" href="./pages/kobe/kobe.html"><span aria-hidden="true">Kobe Bryant</span></a>
           </li>
         </ul>
       </nav>
