Fixed href links for each page

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -38,13 +38,13 @@
             <a class="text-gold" href="/src/index.html"><span aria-hidden="true"> Home </span></a>
           </li>
           <li class="active">
-            <a class="text-gold" href="./pages/about/about.html"><span aria-hidden="true">About</span></a>
+            <a class="text-gold" href="./about.html"><span aria-hidden="true">About</span></a>
           </li>
           <li>
             <a class="text-gold" href="/src/pages/player/player.html"><span aria-hidden="true">Player</span></a>
           </li>
           <li>
-            <a class="text-gold btn" href="./pages/kobe/kobe.html"><span aria-hidden="true">Kobe Bryant</span></a>
+            <a class="text-gold btn" href="/src/pages/kobe/kobe.html"><span aria-hidden="true">Kobe Bryant</span></a>
           </li>
         </ul>
       </nav>
