--- a/src/pages/player/player.html
+++ b/src/pages/player/player.html
@@ -68,7 +68,13 @@
           <i class="fas fa-search fa-2x"></i>
         </div>
         <form action="" class="search-form">
+
           <input type="text" id="search" class="search" placeholder="Search..." autocomplete="off" />
+          <input type="submit" hidden>
+          <!-- <div>
+            <a href="#" class="btn btn-input text-white uppercase letter-spacing-1">Submit</a>
+          </div> -->
+
         </form>
       </div>
     </div>
