Update the stats on cards and search input on the player.html page

--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,10 @@
               <p class="uppercase text-white">Black Mamba</p>
             </div>
           </div>
-          <div class="flip-card-back">STATS</div>
+          <div class="flip-card-back">
+            <h2>CAREER STATS</h2>
+            <p id="stats-1" class="stats-info"></p>
+          </div>
         </div>
       </div>
       <div class="flip-card">
@@ -78,7 +81,10 @@
               <p class="uppercase text-white">Showtime</p>
             </div>
           </div>
-          <div class="flip-card-back">STATS</div>
+          <div class="flip-card-back">
+            <h2>CAREER STATS</h2>
+            <p id="stats-2" class="stats-info"></p>
+          </div>
         </div>
       </div>
       <div class="flip-card">
@@ -92,7 +98,11 @@
               <p class="uppercase text-white">The Captain</p>
             </div>
           </div>
-          <div class="flip-card-back">STATS</div>
+          <div class="flip-card-back">
+            <h2>CAREER STATS</h2>
+            <p id="stats-3" class="stats-info"></p>
+
+          </div>
         </div>
       </div>
       <div class="flip-card">
@@ -106,7 +116,11 @@
               <p class="uppercase text-white">The Diesel</p>
             </div>
           </div>
-          <div class="flip-card-back">STATS</div>
+          <div class="flip-card-back">
+            <h2>CAREER STATS</h2>
+            <p id="stats-4" class="stats-info"></p>
+
+          </div>
         </div>
       </div>
       <div class="flip-card">
@@ -118,7 +132,11 @@
               <p class="uppercase text-white">Big Game James</p>
             </div>
           </div>
-          <div class="flip-card-back">STATS</div>
+          <div class="flip-card-back">
+            <h2>CAREER STATS</h2>
+            <p id="stats-5" class="stats-info"></p>
+
+          </div>
         </div>
       </div>
       <div class="flip-card">
@@ -130,7 +148,10 @@
               <p class="uppercase text-white">The Logo</p>
             </div>
           </div>
-          <div class="flip-card-back">STATS</div>
+          <div class="flip-card-back">
+            <h2>CAREER STATS</h2>
+            <p id="stats-6" class="stats-info"></p>
+          </div>
         </div>
       </div>
     </main>
@@ -145,7 +166,7 @@
     </footer>
   </div>
   <!-- JS -->
-  <script type="text/javascript" src="./app.js" defer></script>
+  <script type="text/javascript" src="./app.js"></script>
 </body>
 
 </html>
