--- a/src/pages/player/player.html
+++ b/src/pages/player/player.html
@@ -19,6 +19,9 @@
   <link rel="stylesheet" href="/src/styles.css" />
   <link rel="stylesheet" href="./player.css">
 
+  <!-- JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.24.0/axios.min.js"></script>
+
   <title>LA LAKERS TEAM</title>
 </head>
 
@@ -58,11 +61,9 @@
 
   <!-- Form -->
   <main>
-    <p class="description letter-spacing-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi repellat
-      ea odit itaque
-      tempore doloribus quam quas ducimus architecto nemo, obcaecati fuga vitae rem suscipit consectetur placeat, vel
-      velit voluptates necessitatibus quis tenetur omnis, aliquam aliquid nihil. Dolorem animi sed saepe et a veniam,
-      officiis deserunt, vero, consequatur fugiat optio.</p>
+    <p class="description letter-spacing-3">The Los Angeles Lakers is a historic organization that has been
+      the epitome of success for more than 70 years. If you want to find out what your favorite current player has been
+      up to, you can search them down below.</p>
     <div class="search-container">
       <div class="box">
         <div class="title-box uppercase text-purple letter-spacing-2">
@@ -75,10 +76,11 @@
           </div>
           <form action="" class="search-form">
             <input type="text" id="search" class="search" placeholder="Search..." autocomplete="off" />
-            <input type="submit" hidden>
+            <input id="myBtn" type="submit" hidden>
           </form>
         </div>
       </div>
+      <p id="response-data"></p>
     </div>
   </main>
   <footer class="footer">
@@ -87,5 +89,6 @@
     </p>
   </footer>
 </body>
+<script src="player.js"></script>
 
 </html>
